name:              diffdump
version:           0.7.4
build-type:        Simple
cabal-version:     >= 1.2

executable diffdump
  main-is:         DiffDump.hs
  build-depends:   base
                 , filemanip >= 0.3.6.2
                 , ansi-terminal >= 0.5.5
                 , parallel-io >= 0.3.2
                 , cmdargs >= 0.10
                 , bytestring >= 0.10.0.0
                 , process-extras >= 0.2.0
                 , directory >= 1.2.0.0
                 , filepath >= 1.3.0.1
                 , unix >= 2.6.0.0
  ghc-options:     -Wall -threaded -O2

executable patchdump
  main-is:         PatchDump.hs
  build-depends:   base
                 , process >= 1.1.0.2
